Added redirection|update click count|record click event